# AFEM

./: README.md  appveyor.yml  pyproject.toml  setup.py
afem/: __init__.py
afem/adaptor/: entities.py
afem/core/: entities.py
afem/exchange/: iges.py  step.py  vsp.py  xde.py
afem/geometry/: create.py  entities.py  intersect.py  project.py
afem/graphics/: display.py
afem/misc/: utils.py
afem/occ/: utils.py
afem/smesh/: entities.py  hypotheses.py  utils.py
afem/structure/: __init__.py  entities.py  mesh.py
afem/topology/: bop.py  check.py  create.py  entities.py  modify.py  transform.py
ci/conda/: bld.bat  build.sh  meta.yaml
dev_env/: environment.yml
docs/: environment.yml
examples/wip/: adaptor_example.py  fillet_example.py  geometry_example.py  oml_example.py  pythonocc_integration.py  sketch_example.py  structure_example.py
test/: test_geometry.py  test_topology.py
