[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "afem"
version = "1.0.1"
description = "Airframe Finite Element Modeler"
readme = "README.md"
authors = [
    { name = "Trevor Laughlin", email = "info@laughlinresearch.com" },
	{ name = "Jason Corman", email = "jason.corman@gatech.edu" },
	{ name = "David Solano", email = "hsolano3@gatech.edu" }
]
license = { text = "LGPL-2.1" }
requires-python = ">=3.9,<3.13"  # Adjust based on compatibility
dependencies = [
	"pythonocc-core",
    "numpy",
    "scipy",
    "wxpython",                                                  
]
keywords = ["finite element", "airframe", "CAD", "modeling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
Homepage = "https://github.com/LaughlinResearch/AFEM"
Repository = "https://github.com/jasoncorman/AFEM"
Issues = "https://github.com/trelau/AFEM/issues"

[tool.setuptools]
packages = ["afem"]

[tool.setuptools.dynamic]
version = {attr = "afem.__version__"}
